apps/model-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-api
spec:
  selector:
    app: model-api
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
