apps/model-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [model-api.durczok.ovh]
      secretName: model-api-tls
  rules:
    - host: model-api.durczok.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: model-api
                port:
                  number: 80
